src/objects/Fielo_TasaConversion__c.object
<CustomObject>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_ConversionMonedas__c</fullName>
        <label>Conversión Monedas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COP -&gt; USD</fullName>
                    <default>true</default>
                    <label>COP -&gt; USD</label>
                </value>
                <value>
                    <fullName>USD -&gt; COP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_FactorConversion__c</fullName>
        <label>Factor de Conversión</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_FechaFin__c</fullName>
        <label>Fecha de Fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_FechaInicio__c</fullName>
        <label>Fecha de Inicio</label>
        <type>Date</type>
    </fields>
    <label>Tasa de Conversión</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>F_ConversionMonedas__c</columns>
        <columns>F_FactorConversion__c</columns>
        <columns>F_FechaInicio__c</columns>
        <columns>F_FechaFin__c</columns>
        <columns>CurrencyIsoCode__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasas de Conversión</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fielo_FechaInicioMenorFechaFin</fullName>
        <active>true</active>
        <errorConditionFormula>F_FechaInicio__c &gt;=  F_FechaFin__c</errorConditionFormula>
        <errorDisplayField>F_FechaFin__c</errorDisplayField>
        <errorMessage>La Fecha de Fin debe ser mayor a la Fecha de Inicio</errorMessage>
    </validationRules>
</CustomObject>